fixed justify on small res, add navbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,6 @@
   font-family: "League Spartan", sans-serif;
 }
 
-.header-box,
 .company-title,
 .account-div,
 .cart-div,
@@ -28,6 +27,7 @@
   align-items: center;
 }
 
+/* header is containing heaader-box (buttons - navbar) + search-box + categories-box */
 #header {
   display: flex;
   align-items: center;
@@ -35,61 +35,102 @@
   flex-direction: column;
 }
 
+.navbar {
+  background-color: #a2a6a7;
+}
+
+.navbar-hidden {
+  transform: translateY(-100%); /* pulls navbar up */
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar {
+  position: sticky; /* or fixed */
+  top: 0;
+  z-index: 1000;
+  transition: transform 0.3s ease-in-out;
+}
+
 .header-box {
-  /* justify-content: space-around; */
-  flex-direction: row;
-  gap: 5%;
-  margin-top: 1.5%;
-  flex-wrap: wrap;
-}
-
-.header-top-left,
-.button-list {
   display: flex;
-  flex-direction: row;
-  gap: 5%;
-}
-
-.button-list {
-  list-style: none;
+  /* flex-direction: row; */
+  align-items: center;
+  justify-content: space-between;
+  /* justify-content: space-between; - important so that left and right part can have empty space between */
+  width: 100%;
+  /* width: 100%; - important so that left part goes fully left, and right part goes to the right margin */
+  padding: 0 32px;
+  box-sizing: border-box;
 }
 
 .header-box-item {
   display: flex;
   align-items: center;
+  gap: 20px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.header-top-left {
+  display: flex;
+  align-items: center;
+  width: 22%;
+}
+
+.header-top-center {
+  display: flex;
   justify-content: center;
-  width: 33.33%;
+  flex: 1; /* stretching, to be centered */
+  align-items: center;
+}
+
+.header-top-center-small {
+  display: none;
+}
+
+.header-top-right {
+  display: flex;
+  align-items: center;
+  gap: 5px; /* gap between 3 buttons */
+  width: 22%;
+}
+
+.search-box {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.categories-buttons {
+  list-style: none;
 }
 
 .div-center {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  /* margin: 2%; */
 }
 
 .flex-column {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   flex-direction: column;
 }
 
 .link {
+  text-align: center;
   display: inline-block;
   padding: 8px 16px;
   border-radius: 8px;
   color: #f0f0f0;
-  /* background: linear-gradient(145deg, #c92828, #2c2c2c); */
   background: linear-gradient(145deg, #2d2d2d, #3c3c3c);
-  /* color: #e6991d;  */
   text-decoration: none;
   font-weight: 600;
   font-size: 1rem;
-  /* letter-spacing: 0.5px; */
   transition: all 0.3s ease;
   /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3),
     inset -2px -2px 6px rgba(255, 255, 255, 0.05); */
+  border: none; /* remove default border from Login-button */
+  box-shadow: none;
 }
 
 .link:hover {
@@ -102,7 +143,7 @@
 
 .link:active {
   background: linear-gradient(145deg, #101010, #1a1a1a);
-  transform: translateY(1px);
+  /* transform: translateY(1px); */
   color: #ff3c00; /* active (clicked) effect */
   background: linear-gradient(145deg, #2d2d2d, #3c3c3c);
   color: #e6991d; /* orange hover effect */
@@ -112,13 +153,30 @@
   background: linear-gradient(145deg, #322319, #f2a025);
   color: white;
   /* box-shadow: 0 0 10px rgba(255, 107, 0, 0.7); */
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
   background: linear-gradient(145deg, #2d2d2d, #3c3c3c);
   color: #e6991d; /* orange hover effect */
 }
 
+.account-button,
+.login-button,
+.cart-button,
+.home-button {
+  width: 100px;
+}
+
+.login-button {
+  cursor: pointer;
+  box-shadow: none;
+}
+
 .margin-bottom {
   margin-bottom: 8px;
+}
+
+.categories-box {
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .input-search {
@@ -135,7 +193,6 @@
 /* ItemCard styling */
 
 .item-card {
-  /* border: 1px solid #ddd; */
   border-radius: 8px;
   padding: 12px;
   width: 250px;
@@ -145,13 +202,6 @@
   margin: 2%;
   height: 430px;
 }
-
-/* .item-image img {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 4px;
-} */
 
 .item-name {
   font-size: 1rem;
@@ -222,15 +272,10 @@
 
 /* selected category button is active: */
 .category-link {
-  /* background-color: #f0f0f0; */
-  /* color: #ddd8d8; */
   color: #0f0f0f;
-  /* border: 1px solid #ccc; */
   padding: 6px 12px;
   margin: 1% 10px;
   cursor: pointer;
-  /* background: linear-gradient(145deg, #0f771b, #2c2c2c);
-  background: linear-gradient(145deg, #d3e1d5, #2c2c2c); */
   background: linear-gradient(145deg, #f6f6f6, #f5f3f3);
   border-width: 0;
   width: 115px;
@@ -238,9 +283,7 @@
 }
 
 .category-link.active-link {
-  /* background: #e6991d !important; */
   color: #fff;
-  /* border-color: #2980b9;    */
   font-weight: bold;
   background: linear-gradient(145deg, #2d2d2d, #3c3c3c);
   color: #e6991d;
@@ -250,53 +293,97 @@
 .categories {
   justify-content: space-around;
   flex-direction: row;
-  /* gap: 5%; */
   flex-wrap: wrap;
   border-radius: 8px;
 }
 
 .category-items-div {
   background-color: #2c2c2c;
+  max-width: 1440px;
+  /* max-width = same as category-items-div (category-buttons-div) */
+  margin: auto;
+  justify-content: center;
 }
 
 .categories {
   background-color: #a2a6a7;
-  /* margin: 2%; */
-  /* gap: 7%; */
   column-gap: 10px;
   row-gap: 0;
 }
 
 .product-image {
   width: 100%;
-  /* height: auto; */
   height: 200px;
   object-fit: contain;
   border-radius: 8px;
 }
 
-@media (max-width: 1330px) {
-  .categories {
+@media (max-width: 1465px) {
+  .categories,
+  .category-items-div {
     column-gap: 5px;
     margin: 0 2%;
   }
   .link {
     font-size: 0.9rem;
   }
+
+  /* hide company image - it will show up below navbar, but not inside navbar anymore */
+  .header-top-center,
+  .company-title1 {
+    display: none !important;
+  }
+  .header-top-center-small {
+    display: block;
+  }
+  .header-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%; /* buttons should take full width */
+    padding: 0 16px;
+    box-sizing: border-box;
+  }
+
+  .header-top-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+    width: auto;
+  }
+
+  .header-top-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    width: auto;
+  }
+
+  .header-top-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 16px;
+    width: auto;
+  }
 }
 
-@media (max-width: 900px) {
-  /* #header {
-    align-items: center;
-  } */
+@media (max-width: 1060px) {
   .header-box {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 4px;
   }
-  .search-box {
-    margin-top: 30px;
-    margin-bottom: 35px;
+  .header-top-left,
+  .header-top-right {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    padding: 4px;
   }
 }
 
@@ -318,6 +405,16 @@
   }
   .item-card {
     height: 450px;
+  }
+}
+
+/* mobile resolution: */
+@media (max-width: 380px) {
+  .header-top-right {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
   }
 }
 
